--- a/Mod0Recipes/mod0checkpoint.html
+++ b/Mod0Recipes/mod0checkpoint.html
@@ -3,7 +3,7 @@
 <title>Level 4 - Module 0 Checkpoint</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://league-level4.github.io/style.css">
+<link rel="stylesheet" href="../style.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 
 
@@ -33,6 +33,6 @@ Teacher-led. Before starting, make sure every student has imported their Module 
 
 </pre>
 </p>
-<script src="https://league-level4.github.io/copyright.js"></script>
+<script src="../copyright.js"></script>
 
 </body></html>
