--- a/Mod4Recipes/mod4checkpoint.html
+++ b/Mod4Recipes/mod4checkpoint.html
@@ -3,7 +3,7 @@
 <title>Level 4 - Module 1 Checkpoint</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://league-level4.github.io/style.css">
+<link rel="stylesheet" href="../style.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 
 
@@ -52,7 +52,7 @@ Teacher-led. Before starting, make sure every student has imported their Module 
         v) display the information for the cake that has been sold for the highest price.
         </pre>
 </p>
-<script src="https://league-level4.github.io/copyright.js"></script>
+<script src="../copyright.js"></script>
 
 </body></html>
 
