--- a/Mod1Recipes/index.html
+++ b/Mod1Recipes/index.html
@@ -3,7 +3,7 @@
 <title>Level 4 - Module 1 Recipes</title>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="https://league-level4.github.io/style.css">
+<link rel="stylesheet" href="../style.css">
 <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
 <style>
 body,h1 {font-family: "Raleway", sans-serif}
@@ -14,8 +14,8 @@ body, html {height: 100%}
     background-size: cover;
 }
 </style>
-    <script src="https://league-level4.github.io/footer.js"> </script>
-    <script src="https://league-level4.github.io/copyrightFooter.js"></script>
+    <script src="../footer.js"> </script>
+    <script src="../copyrightFooter.js"></script>
 <body>
     <h1 class="w3-jumbo w3-animate-top">Level 4 Module 1</h1>
     <h2><a href="https://classroom.github.com/a/GZUzV6Yy">Click Here to Download Code</a></h2>
