--- a/Level4 Overview.html
+++ b/Level4 Overview.html
@@ -87,8 +87,8 @@ Gotta Catch 'em All<br><br>
 
         <div style="float: left; width: 20%;">
         <h3>Checkpoint 0</h3>
-        <a href="">2D Array Quiz 0</a><br>
-        <a href="">2D Array Quiz 1</a><br>
+        <a href="./Mod0Recipes/2D Array Quiz.html">2D Array Quiz 0</a><br>
+        <a href="./Mod0Recipes/2D Array Quiz 2.html">2D Array Quiz 1</a><br>
         <a href="./Mod0Recipes/mod0checkpoint.html">Module 0 Checkpoint</a><br>
         </div>
 
