--- a/Mod0Recipes/index.html
+++ b/Mod0Recipes/index.html
@@ -50,8 +50,8 @@ body, html {height: 100%}
     <div id="rightDiv"style="float: right; width: 33%;">
         <h2>Self Checkpoints</h2>
 
-        <h3><a href="">2D Array Quiz 1</a></h3>
-        <h3><a href="">2D Array Quiz 2</a></h3>
+        <h3><a href="./2D Array Quiz.html">2D Array Quiz 1</a></h3>
+        <h3><a href="./2D Array Quiz 2.html">2D Array Quiz 2</a></h3>
       <br> 
         <hr class="w3-border-grey" style="margin:auto;width:40%">
   
