--- a/Level4 Overview.html
+++ b/Level4 Overview.html
@@ -94,8 +94,8 @@ Gotta Catch 'em All<br><br>
 
          <div style="float: left; width: 20%;">
          <h3>Checkpoint 1</h3>
-          <a href="">Swithes, Templates, Enums Quiz 1</a><br>
-          <a href="">Swithes, Templates, Enums 2</a><br>
+          <a href="./Mod1Recipes/TSE Quiz 1.html">Swithes, Templates, Enums Quiz 1</a><br>
+          <a href="./Mod1Recipes/TSE Quiz 2.html">Swithes, Templates, Enums Quiz 2</a><br>
           <a href="./Mod1Recipes/mod1checkpoint.html">Module 1 Checkpoint</a><br>
           </div>
 
