--- a/Level4 Overview.html
+++ b/Level4 Overview.html
@@ -101,7 +101,7 @@ Gotta Catch 'em All<br><br>
 
         <div style="float: left; width: 20%;">
         <h3>Checkpoint 2</h3>
-        <a href="">String Manipulation Quiz 1</a><br>
+        <a href="./Mod2Recipes/String Manip Quiz 1.html">String Manipulation Quiz 1</a><br>
         <a href="">String Manipulation Quiz 1</a><br>
         </div>
 
