--- a/Mod2Recipes/index.html
+++ b/Mod2Recipes/index.html
@@ -42,7 +42,7 @@ body, html {height: 100%}
     <div id="rightDiv"style="float: right; width: 33%;">
         <h2>Self Checkpoints</h2>
 
-        <h3><a href="">String Manipulation Quiz 1</a></h3>
+        <h3><a href="String Manip Quiz 1.html">String Manipulation Quiz 1</a></h3>
         <h3><a href="">String Manipulation Quiz 2</a></h3>
         <br> 
         <hr class="w3-border-grey" style="margin:auto;width:40%">
