--- a/Level4 Overview.html
+++ b/Level4 Overview.html
@@ -107,8 +107,8 @@ Gotta Catch 'em All<br><br>
 
          <div style="float: left; width: 20%;">
            <h3>Checkpoint 3</h3>
-          <a href="">Exceptions Quiz 1</a><br>
-        <a href="">Exceptions Quiz 2</a><br>
+          <a href="./Mod2Recipes/Exceptions Quiz 1.html">Exceptions Quiz 1</a><br>
+        <a href="./Mod2Recipes/Exceptions Quiz 2.html">Exceptions Quiz 2</a><br>
            <a href="https://docs.oracle.com/javase/tutorial/essential/exceptions/QandE/questions.html">Module 3 Checkpoint</a><br>
                <br>
                <br>
