--- a/Level4 Teachers.html
+++ b/Level4 Teachers.html
@@ -111,7 +111,7 @@ At the end of this module, students will be able to:<br>
 - know that try block must have a catch or a finally block with it
 - identify the control flow of a program during exceptional situations
 - write custom exceptions by extending the Exception class
-
+- know that exceptions happen at run-time
 
 </pre>
 
