--- a/Mod3Recipes/index.html
+++ b/Mod3Recipes/index.html
@@ -43,8 +43,8 @@ body, html {height: 100%}
     <div id="rightDiv"style="float: right; width: 33%;">
         <h2>Self Checkpoints</h2>
 
-        <h3><a href="">Exceptions Quiz 1</a></h3>
-        <h3><a href="">Exceptions Quiz 2</a></h3>
+        <h3><a href="./Exceptions Quiz 1.html">Exceptions Quiz 1</a></h3>
+        <h3><a href="./Exceptions Quiz 2.html">Exceptions Quiz 2</a></h3>
         <br> 
         <hr class="w3-border-grey" style="margin:auto;width:40%">
   
