--- a/Level4 Teachers.html
+++ b/Level4 Teachers.html
@@ -26,7 +26,7 @@
 Creating, using, and iterating through 2-Dimensional Arrays<br>
 <br>
 <a href="./Mod0Recipes/index.html">Recipes</a> <br>
-<a href="https://classroom.github.com/a/avEX8R4T">Code </a>  bit.ly/l4_mod0<br>
+<a href="https://classroom.github.com/a/avEX8R4T">Code </a>  bit.ly/level4mod1<br>
  <a href="https://github.com/League-level4/_00_2D_Arrays_Solutions">Solutions </a><br>
 
 
@@ -48,7 +48,7 @@ At the end of this module, students will be able to:<br>
     Templates, Enums, and Switch Statements<br>
     <br>
    <a href="./Mod1Recipes/index.html">Recipes</a><br>
-    <a href="https://classroom.github.com/a/GZUzV6Yy">Code</a>   bit.ly/l4_mod1<br>
+    <a href="https://classroom.github.com/a/GZUzV6Yy">Code</a>   bit.ly/level4mod1<br>
  <a href="https://github.com/League-level4/_01_Templates_Switches_and_Enums_Solutions">Solutions </a><br>
 
 <br>
@@ -75,7 +75,7 @@ At the end of this module, students will be able to:<br>
     String Manipulation<br>
     <br>
      <a href="./Mod2Recipes/index.html">Recipes</a><br>
-   <a href="https://classroom.github.com/a/TjqYLmQ4">Code</a>  bit.ly/l4_mod2<br>
+   <a href="https://classroom.github.com/a/TjqYLmQ4">Code</a>  bit.ly/level4mod2<br>
 
 
 <br>
@@ -97,7 +97,7 @@ At the end of this module, students will be able to:<br>
     Exceptions<br>
     <br>
     <a href="./Mod3Recipes/index.html">Recipes</a><br>
-   <a href="https://classroom.github.com/a/8WA-iPYd">Code</a>   bit.ly/l4_mod3<br>
+   <a href="https://classroom.github.com/a/8WA-iPYd">Code</a>   bit.ly/level4mod3<br>
 
   <br>
 
@@ -119,7 +119,7 @@ At the end of this module, students will be able to:<br>
     Encapsulation and Polymorphism<br>
     <br>
     <a href="./Mod4Recipes/index.html">Recipes</a><br>
-   <a href="https://classroom.github.com/a/vgfE0GE4">Code</a>  bit.ly/l4_mod4 <br>
+   <a href="https://classroom.github.com/a/vgfE0GE4">Code</a>  bit.ly/level4mod4 <br>
 
   <br>
 
