--- a/Mod4Recipes/Encapsulation and Polymorphism Quiz 1.html
+++ b/Mod4Recipes/Encapsulation and Polymorphism Quiz 1.html
@@ -47,7 +47,7 @@ function buildQuiz(){
 	questions[0] = new Question();
 questions[0].number=1;
 questions[0].type="FILL_IN";
-questions[0].question="What&nbspis&nbspthe&nbspoutput?<br><br>class&nbspMath{<br>&nbsp&nbsp&nbsp&nbsppublic&nbspMath(){<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSystem.out.print(\"Math\");<br>&nbsp&nbsp&nbsp&nbsp}<br>}<br><br>class&nbspStats&nbspextends&nbspMath{<br>&nbsp&nbsp&nbsp&nbsppublic&nbspStats(){&nbsp<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspsuper();<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSystem.out.print(\"Stats\");<br>}<br><br>class&nbspRun{<br>&nbsp&nbsp&nbsp&nbsppublic&nbspstatic&nbspvoid&nbspmain(String[]&nbspargs){<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspStats&nbsps&nbsp=&nbspnew&nbspStats();<br>&nbsp&nbsp&nbsp&nbsp}<br>}";
+questions[0].question="What&nbspis&nbspthe&nbspoutput?<br><br>class&nbspMath{<br>&nbsp&nbsp&nbsp&nbsppublic&nbspMath(){<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSystem.out.print(\"Math\");<br>&nbsp&nbsp&nbsp&nbsp}<br>}<br><br>class&nbspStats&nbspextends&nbspMath{<br>&nbsp&nbsp&nbsp&nbsppublic&nbspStats(){&nbsp<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspsuper();<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSystem.out.print(\"Stats\");<br>&nbsp&nbsp&nbsp&nbsp}<br>}<br><br>public class&nbspRun{<br>&nbsp&nbsp&nbsp&nbsppublic&nbspstatic&nbspvoid&nbspmain(String[]&nbspargs){<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspStats&nbsps&nbsp=&nbspnew&nbspStats();<br>&nbsp&nbsp&nbsp&nbsp}<br>}";
 questions[0].correctAnswers="MathStats";
 questions[1] = new Question();
 questions[1].number=2;
