--- a/Level4 Teachers.html
+++ b/Level4 Teachers.html
@@ -134,7 +134,7 @@ At the end of this module, students will be able to:<br>
 - give examples of polymorphism in a Java context
 - know that superclasses can be new subclasses, but subclasses cannot be new superclasses
 - understand the purpose of the super() method
-- unddrstand the purpose of public, private, and protected keywords
+- understand the purpose of public, private, and protected keywords
 
 </pre>
 
