Update String Manip Quiz 2.html

--- a/Mod2Recipes/String Manip Quiz 2.html
+++ b/Mod2Recipes/String Manip Quiz 2.html
@@ -72,7 +72,7 @@ questions[2].correctAnswers=1;
 questions[3] = new Question();
 questions[3].number=4;
 questions[3].type="MULT_ANS";
-questions[3].question="String&nbsps1&nbsp=&nbspnew&nbspString(\"Hi&nbspThere\");<br>String&nbsps2&nbsp=&nbspnew&nbspString(\"Hi&nbspThere\");<br>String&nbsps3&nbsp=&nbsps1;";
+questions[3].question="Check the statements that will evaluate to true based on the code below.<br><br>String&nbsps1&nbsp=&nbspnew&nbspString(\"Hi&nbspThere\");<br>String&nbsps2&nbsp=&nbspnew&nbspString(\"Hi&nbspThere\");<br>String&nbsps3&nbsp=&nbsps1;";
 questions[3].choices[0]="&nbsp(s1&nbsp==&nbsps2)";
 questions[3].choices[1]="(s1.equals(s2))";
 questions[3].choices[2]="(s1&nbsp==&nbsps3)";
