Update Encapsulation and Polymorphism Quiz 1.html

--- a/Mod4Recipes/Encapsulation and Polymorphism Quiz 1.html
+++ b/Mod4Recipes/Encapsulation and Polymorphism Quiz 1.html
@@ -79,7 +79,7 @@ questions[3].correctAnswers="private";
 questions[4] = new Question();
 questions[4].number=5;
 questions[4].type="FILL_IN";
-questions[4].question="class&nbspS{<br>&nbsp&nbsp&nbsp&nbsppublic&nbspvoid&nbsprun(){<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSystem.out.print(\"S\");<br>&nbsp&nbsp&nbsp&nbsp}<br>}<br><br>class&nbspT&nbspextends&nbspS{<br>&nbsp&nbsp&nbsp&nbsppublic&nbspvoid&nbsprun(){<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSystem.out.print(\"T\");<br>&nbsp&nbsp&nbsp&nbsp}<br>}<br><br>public&nbspclass&nbspRunner{<br>&nbsp&nbsp&nbsp&nbsppublic&nbspstatic&nbspvoid&nbspmain(String[]&nbspargs){<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspS&nbsps&nbsp=&nbspnew&nbspT();<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsps.run();<br>&nbsp&nbsp&nbsp&nbsp}<br>}";
+questions[4].question="What is the Output?<br><br>class&nbspS{<br>&nbsp&nbsp&nbsp&nbsppublic&nbspvoid&nbsprun(){<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSystem.out.print(\"S\");<br>&nbsp&nbsp&nbsp&nbsp}<br>}<br><br>class&nbspT&nbspextends&nbspS{<br>&nbsp&nbsp&nbsp&nbsppublic&nbspvoid&nbsprun(){<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspSystem.out.print(\"T\");<br>&nbsp&nbsp&nbsp&nbsp}<br>}<br><br>public&nbspclass&nbspRunner{<br>&nbsp&nbsp&nbsp&nbsppublic&nbspstatic&nbspvoid&nbspmain(String[]&nbspargs){<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbspS&nbsps&nbsp=&nbspnew&nbspT();<br>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsps.run();<br>&nbsp&nbsp&nbsp&nbsp}<br>}";
 questions[4].correctAnswers="T";
 
 	
