Update 2D Array Quiz.html

--- a/Mod0Recipes/2D Array Quiz.html
+++ b/Mod0Recipes/2D Array Quiz.html
@@ -57,7 +57,7 @@ questions[0].correctAnswers=1;
 questions[1] = new Question();
 questions[1].number=2;
 questions[1].type="FILL_IN";
-questions[1].question="Fill&nbspin&nbspthe&nbspblank&nbspto&nbspprint&nbspthe&nbspnumber&nbspof&nbsprows&nbspin&nbsparr.<br><br>int[][]&nbsparr&nbsp=&nbspgerArray();&nbsp<br>System.out.println(\"There&nbspare&nbsp\"&nbsp+&nbsp________&nbsp+&nbsp\"&nbsprows&nbspin&nbspthis&nbsp2D&nbsparray.\");";
+questions[1].question="Fill&nbspin&nbspthe&nbspblank&nbspto&nbspprint&nbspthe&nbspnumber&nbspof&nbsprows&nbspin&nbsparr.<br><br>int[][]&nbsparr&nbsp=&nbspgetArray();&nbsp<br>System.out.println(\"There&nbspare&nbsp\"&nbsp+&nbsp________&nbsp+&nbsp\"&nbsprows&nbspin&nbspthis&nbsp2D&nbsparray.\");";
 questions[1].correctAnswers="arr.length";
 questions[2] = new Question();
 questions[2].number=3;
