--- a/Mod0Recipes/mod0checkpoint.html
+++ b/Mod0Recipes/mod0checkpoint.html
@@ -29,7 +29,7 @@ Teacher-led. Before starting, make sure every student has imported their Module 
 
 4.  Use a nested for loop to initialize each int in the 2D array to a random number.
   
-5.  Use a separate nested for loop to print the contents of the array if row major order.
+5.  Use a separate nested for loop to print the contents of the array in row major order.
 
 </pre>
 </p>
