Update 2D Array Quiz 2.html

--- a/Mod0Recipes/2D Array Quiz 2.html
+++ b/Mod0Recipes/2D Array Quiz 2.html
@@ -61,7 +61,7 @@ questions[1].question="Select&nbspthe&nbspvalid&nbspways&nbspto&nbspinitialize&n
 questions[1].choices[0]="int[][]&nbspa&nbsp=&nbspnew&nbspint[][];";
 questions[1].choices[1]="String[][]&nbspwords&nbsp=&nbspnew&nbspString[0][0];";
 questions[1].choices[2]="Robot[]&nbsprobs&nbsp=&nbspnew&nbspRobot[10];";
-questions[1].choices[3]="Bike[][]&nbspbikes&nbsp=&nbspnew&nbspBikes[10][10];";
+questions[1].choices[3]="Bike[][]&nbspbikes&nbsp=&nbspnew&nbspBike[10][10];";
 questions[1].choices[4]="double[][]&nbspd&nbsp=&nbspnew&nbspd[5][5];";
 questions[1].choices[5]="boolean[][]&nbspb&nbsp=&nbsp{{true}};";
 questions[1].correctAnswers[0]=1;
