--- a/index.html
+++ b/index.html
@@ -1,29 +1,24 @@
 <!DOCTYPE html>
 <html>
-<title>League Level 4</title>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<link rel="stylesheet" href="style.css">
-<link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
-<style>
-body,h1 {font-family: "Raleway", sans-serif}
-body, html {height: 100%}
-.bgimg {
-    min-height: 100%;
-    background-position: center;
-    background-size: cover;
-}
-</style>
-<script src="copyrightFooter.js"></script>
+   <head>
+        <title>League Level 4</title>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="https://league-central.github.io/curriculum/style/style.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Raleway">
+        <script src="https://league-central.github.io/curriculum/script/headerAndFooter.js"></script>
+    </head>
 
-<body>
+ 
+    <body>
+            <div id="wrap">
+            <div id="main">
+                <div id = "linkPageBody">
+                    <h1>League Level 4</h1>
 
-    <div class="w3-display-topleft w3-padding-large w3-xlarge">
+  <hr>
 
-    <h1 class="w3-jumbo w3-animate-top">League Level 4   </h1>
-  </div>
-
-    <div class="w3-display-middle">
+    
     <h3><a href="Level4 Teachers.html">Teacher's Guide to Level 4 Modules</a></h3>
     <h3><a href="Level4 Overview.html">Complete Recipe Overview of Level 4</a></h3>
     <h3><a href="Level4 Students.html">Student Recipe Modules</a></h3>
@@ -31,16 +26,16 @@ body, html {height: 100%}
    <h3><a href="">UCSD Extension Overview</a></h3>
 
 
-    <hr class="w3-border-grey" style="margin:auto;width:40%">
+
+    <hr>
 
   </div>
-  <div class="w3-display-bottomleft w3-padding-large">
-    <a href="https://league-level4.github.io/"><img height="128" width="128" src="league.jpg" alt="league-logo"></a>
   </div>
-    <div id="copyright">
-        <script>copyright();</script>
-    </div>
+ </div>                
 
+        <div id="footer">
+            <script>addFooter();</script>
+        </div>
 
-</body>
+    </body>   
 </html>
