--- a/Mod4Recipes/mod4checkpoint.html
+++ b/Mod4Recipes/mod4checkpoint.html
@@ -43,7 +43,9 @@ Teacher-led. Before starting, make sure every student has imported their Module 
         orderCake
         and
         readymadeCake.
-
+        </pre>
+    <img src="./cp4 table.png">
+    <pre>
         B) By using classes definition from a), write an application program that will: 
         i) declare an array of 20 cake objects; 
         ii) input data for cake objects and store them into the array; 
