--- a/Mod4Recipes/mod4checkpoint.html
+++ b/Mod4Recipes/mod4checkpoint.html
@@ -44,7 +44,7 @@ Teacher-led. Before starting, make sure every student has imported their Module 
         and
         readymadeCake.
         </pre>
-    <img src="./cp4 table.png" width="400" height="275">
+    <img src="./cp4 table.png" style="width:400px;height:275px;" />
     <pre>
         B) By using classes definition from a), write an application program that will: 
         i) declare an array of 20 cake objects; 
