Update String Manip Quiz 2.html

--- a/Mod2Recipes/String Manip Quiz 2.html
+++ b/Mod2Recipes/String Manip Quiz 2.html
@@ -84,7 +84,7 @@ questions[3].correctAnswers[2]=3;
 questions[4] = new Question();
 questions[4].number=5;
 questions[4].type="FILL_IN";
-questions[4].question="Given&nbspthe&nbspfollowing&nbspcode&nbspsegment,&nbspwhat&nbspis&nbspthe&nbspvalue&nbspof&nbsps1&nbspafter&nbspthe&nbspcode&nbspexecutes?<br><br>String&nbsps1&nbsp=&nbsp\"Hi&nbspThere\";<br>String&nbsps2&nbsp=&nbsps1;<br>String&nbsps3&nbsp=&nbsps2;<br>String&nbsps4&nbsp=&nbsps1;<br>s2&nbsp=&nbsps2.toLowerCase();<br>s3&nbsp=&nbsps3.toUpperCase();<br>s4&nbsp=&nbspnull;";
+questions[4].question="Given&nbspthe&nbspfollowing&nbspcode&nbspsegment,&nbspwhat&nbspis&nbspthe&nbspvalue&nbspof&nbsps1&nbspafter&nbspthe&nbspcode&nbspexecutes?<br><br>String&nbsps1&nbsp=&nbsp\"HiThere\";<br>String&nbsps2&nbsp=&nbsps1;<br>String&nbsps3&nbsp=&nbsps2;<br>String&nbsps4&nbsp=&nbsps1;<br>s2&nbsp=&nbsps2.toLowerCase();<br>s3&nbsp=&nbsps3.toUpperCase();<br>s4&nbsp=&nbspnull;";
 questions[4].correctAnswers="HiThere";
 
 	
