Update TSE Quiz 2.html

--- a/Mod1Recipes/TSE Quiz 2.html
+++ b/Mod1Recipes/TSE Quiz 2.html
@@ -69,7 +69,7 @@ questions[1].correctAnswers=1;
 questions[2] = new Question();
 questions[2].number=3;
 questions[2].type="MULT_ANS";
-questions[2].question="Select&nbspthe&nbspfollowing&nbspdata&nbsptypes&nbspthat&nbspcan&nbspbe&nbspused&nbspin&nbspa&nbspswitch&nbspstatement&nbspint&nbspJava.";
+questions[2].question="Select&nbspthe&nbspfollowing&nbspdata&nbsptypes&nbspthat&nbspcan&nbspbe&nbspused&nbspin&nbspa&nbspswitch&nbspstatement&nbspin&nbspJava.";
 questions[2].choices[0]="int";
 questions[2].choices[1]="float";
 questions[2].choices[2]="String";
