--- a/index.html
+++ b/index.html
@@ -1,6 +1,11 @@
 <!DOCTYPE html>
 <html>
-   <head>
+   <script>
+      window.onload=function(){
+         window.location.href="http://central.jointheleague.org/levels/Level4/Level4%20Students.html";  
+      }
+   </script>
+<!--    <head>
         <title>League Level 4</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -37,5 +42,5 @@
             <script>addFooter();</script>
         </div>
 
-    </body>   
+    </body>    -->
 </html>
